manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rust-string-outputter-svc
spec:
  type: ClusterIP
  selector:
    app: rust-string-outputter
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
