manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rust-string-outputter-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rust-string-outputter-svc
          servicePort: 2345
